[package]
name = "darwin-libproc"
version = "0.0.1"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Safe and idiomatic wrappers for macOS libproc"
keywords = ["libproc", "proc", "darwin", "macos"]
categories = ["os::macos-apis", "api-bindings"]
repository = "https://github.com/heim-rs/darwin-libproc"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[badges]
maintenance = { status = "experimental" }

[dependencies]
darwin-libproc-sys = { path = "../darwin-libproc-sys" }
libc = "^0.2"
